--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "firebase": "^5.10.0",
+    "firebase-admin": "^7.3.0",
+    "firebaseui": "^3.6.0",
     "mongoose": "^5.5.1"
   }
 }
