--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "firebase": "^5.10.0",
     "firebase-admin": "^7.3.0",
     "firebaseui": "^3.6.0",
+    "method-override": "^3.0.0",
     "mongoose": "^5.5.1"
   }
 }
